src/styles/components/_rainbow.scss
@use '/src/styles/mixins' as *;

/* WINDOW WRAPPER */

[role='document'] * {
  transition: all 0.3s ease-in-out !important;

  .ju367v4y {
    display: flex !important;
    flex-flow: column !important;
  }
}

/* MAIN WINDOW */

[role='document'] > div > div > div {
  color: rgba(51, 226, 230, 0.85);
  background-color: rgba(1, 0, 32, 0.75);
  box-shadow: 0 0 0.5rem rgba(51, 226, 230, 0.5);
  -webkit-backdrop-filter: blur(1rem);
  backdrop-filter: blur(1rem);
}

// [role="document"] > div > div > div > div > div > div:nth-child(2) {} - wrappers

[role='document']
  > div
  > div
  > div
  > div
  > div
  > div:nth-child(2)::-webkit-scrollbar {
  width: 0;
  height: 0;
}

/* BUTTONS */

[role='document'] button {
  background-color: $blue !important;
  border: 1px solid $transparent-cyan !important;
  margin-bottom: 0.5rem !important;

  &:hover:not(&:disabled),
  &:active:not(&:disabled),
  &:focus:not(&:disabled) {
    transform: scale(1.05) !important;
    background-color: $light-blue !important;
    border-color: $cyan !important;
    @include box-glow;
  }

  &:disabled {
    opacity: 0.5;
    border-color: rgba(51, 226, 230, 0.5) !important;
    background-color: rgba(56, 117, 250, 0.5) !important;
    filter: none !important;
    transform: none !important;
    cursor: not-allowed;
  }

  * {
    cursor: inherit;
  }

  *:not(div, span) {
    color: rgb(255, 60, 64);
  }
}

a > div {
  cursor: pointer;
}

[role='document'] svg {
  width: 1rem;
  height: 1rem;
}

@media only screen and (max-width: 600px) {
  [role='document'] button,
  [role='document'] button:hover,
  [role='document'] button:active [role='document'] button:disabled,
  [role='document'] button:disabled:hover,
  [role='document'] button:disabled:active {
    background-color: transparent !important;
    border: none !important;
  }
}

